--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "jquery-knob": "^1.2.11",
     "svg.js": "^2.6.1"
   }
