--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "comp": "webpack",
-    "build": "webpack-dev-server"
+    "comp": "node_modules/.bin/webpack",
+    "build": "node_modules/.bin/webpack-dev-server"
   },
   "repository": {
     "type": "git",
